<resources>
    <string name="app_name">Menu_app</string>
    <string name="dish_name">Dish Name</string>
    <string name="cn_name">cn Name</string>
    <string name="price">Price</string>
    <string name="print">Print</string>
    <string name="customer_print">Customer Print</string>
    <string name="total">Total</string>
    <string name="total_price">Total Price</string>
    <string name="search">Search</string>
    <string name="popular_dishes">Popular Dishes</string>
    <string name="dishes">Dishes</string>
    <string name="shopping_cart">Shopping cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dish_page_dish_id">%1$s</string>
    <string name="dish_page_dish_name">%1$s</string>
    <string name="dish_page_chinese_name">%1$s</string>
    <string name="dish_page_staff_chinese_name">%1$s</string>
    <string name="dish_page_price">%.2f</string>
    <string name="dish_number_title">Dish number: &#160;</string>
    <string name="dish_name_title">Dish name: &#160;</string>
    <string name="dish_chinese_name_title">Chinese name: &#160;</string>
    <string name="staff_chinese_name_title">Staff Chinese Name: &#160;</string>
    <string name="dish_page_price_title">Price: £</string>
    <string name="delete_dish">Delete Dish</string>
    <string name="edit_dish_btn">Edit</string>
    <string name="add_new_dish">Add dish</string>
    <string name="save">Save</string>
</resources>