<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16sp">

    <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:titleTextColor="@android:color/white"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/edit_dish_page_toolbar"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/add_dish_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16sp">

                <!-- == Dish number =================================================== -->
                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <TextView
                            android:id="@+id/dish_page_id_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dish_number_title"
                            android:textSize="18sp"
                            android:layout_marginTop="10sp"
                            android:textStyle="bold"/>

                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/new_dish_number"
                            android:layout_toEndOf="@id/dish_page_id_title"/>

                </RelativeLayout>

                <!-- == Dish name ===================================================== -->
                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <TextView
                            android:id="@+id/dish_page_name_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10sp"
                            android:text="@string/dish_name_title"
                            android:textSize="18sp"
                            android:textStyle="bold"/>

                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/new_dish_name"
                            android:layout_toEndOf="@+id/dish_page_name_title"/>

                </RelativeLayout>

                <!-- == Chinese name ================================================== -->
                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <TextView
                            android:id="@+id/dish_page_chinese_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10sp"
                            android:text="@string/dish_chinese_name_title"
                            android:textSize="18sp"
                            android:textStyle="bold"/>

                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/new_dish_cn_name"
                            android:layout_toEndOf="@+id/dish_page_chinese_title"/>
                </RelativeLayout>

                <!-- == Staff Chinese name ============================================== -->
                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <TextView
                            android:id="@+id/dish_page_staff_cn_name_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10sp"
                            android:text="@string/staff_chinese_name_title"
                            android:textSize="18sp"
                            android:textStyle="bold"/>

                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/new_dish_staff_cn_name"
                            android:layout_toEndOf="@+id/dish_page_staff_cn_name_title"/>
                </RelativeLayout>

                <!-- == Dish price ==================================================== -->
                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <TextView
                            android:id="@+id/dish_page_price_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10sp"
                            android:text="@string/dish_page_price_title"
                            android:textSize="18sp"
                            android:textStyle="bold"/>

                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/new_dish_price"
                            android:layout_toEndOf="@+id/dish_page_price_title"
                            android:inputType="numberDecimal"/>
                </RelativeLayout>

                <!-- == Save button =================================================== -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                            android:id="@+id/new_dish_save_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/add_new_dish"
                            android:textStyle="bold"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10sp"
                            android:layout_marginStart="50sp"
                            android:textSize="15sp"
                            style="@style/Widget.Material3.Button"/>

                </RelativeLayout>

            </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>